# neutrino

./: .gitignore  .mailmap  .svnignore  AUTHORS  ChangeLog  Makefile.am  README.md  acinclude.m4  autogen.sh  autorun.sh  configure.ac  control.h  cross-configure.apollo.debug  cross-configure.cool  cross-configure.cool.debug  cross-configure.tuxbox  cs_vfd.h  slovak.locale  tagit-config.json  tsrouter.h  upgrade_version.pl  version_pseudo.h
data/: Makefile.am  bad_package_pattern.list.sample  cables.xml  encoding.conf  epglanguages.conf  epgmap.xml  mk_terrestrial_xml.pl  myservices.xml  providermap.xml  radio-stations.xml  satellites.xml  settingsupdate.conf  terrestrial.xml  tobackup.conf  webradio_usr.xml  webtv_usr.xml
data/config/: Makefile.am  bad_package_pattern.list.sample  cables.xml  encoding.conf  good_package_pattern.list.sample  satellites.xml  settingsupdate.conf.in  terrestrial.xml  weather_locations.xml
data/control/: Makefile.am  migration.sh.in  recording.end  recording.start  standby.off  standby.on
data/fonts/: Makefile.am  README.pcf  tuxtxt.otb
data/icons/: 0.raw  1.raw  16_9.raw  16_9_gray.raw  2.raw  3.raw  4.raw  5.raw  6.raw  7.raw  8.raw  9.raw  Makefile.am  audio.raw  b16.raw  b2.raw  b3.raw  biss.raw  biss_gray.raw  biss_green.raw  biss_white.raw  biss_yellow.raw  blau.raw  border_lr.raw  border_ul.raw  ca.raw  card.raw  card_gray.raw  card_green.raw  colors.raw  conax.raw  conax_gray.raw  conax_green.raw  conax_white.raw  conax_yellow.raw  cw.raw  cw_gray.raw  cw_green.raw  cw_white.raw  cw_yellow.raw  (+113 more)
data/inetradio/: Makefile.am  radio-favorites.xml  radio-stations.xml
data/initial/: Makefile.am  bouquets.xml  frontend.conf  services.xml  ubouquets.xml
data/iso-codes/: Makefile.am  iso-639.tab  iso-639.tab.full
data/lcd/: Makefile.am
data/lcd4l/: Makefile.am
data/license/: Makefile.am  deutsch.license  english.license  slovak.license
data/locale/: Makefile.am  _readme.txt  bayrisch.locale  bosanski.locale  ch-baslerdeutsch.locale  ch-berndeutsch.locale  check.locale.files  create-locale  create-locals-update.pl  create.locals.h  create.locals_intern.h  czech.locale  deutsch.locale  dutch.locale  english.locale  francais.locale  french.locale  hungarian.locale  italiano.locale  nederlands.locale  polski.locale  portugues.locale  russkij.locale  slovak.locale  suomi.locale  svenska.locale
data/luaplugins/: Makefile.am  nlab.lua
data/neutrino-scripts/: Makefile.am  flash.start
data/oled/: Makefile.am
data/othemes/: Makefile.am  advanced.otheme  default.otheme  easy.otheme  medium.otheme  simple.otheme  weather.otheme
data/pictures/: Makefile.am
data/policy/: Makefile.am  locale.policy.sample
data/scripts/: Makefile.am  backup.list  backup.sh  backup.sh.in  backup_flash.sh.in  install.sh  neutrino.sh.in  restore.sh  restore_flash.sh.in
data/themes/: Bluemoon-3.0.theme  Classic.theme  Crema.theme  DVB2000.theme  DarkBlue.theme  DarkBrown.theme  Gray.theme  Grey-3.0.theme  Grey-Blue.theme  Grey.theme  Makefile.am  MonoChrom.theme  Neutrino-3.0.theme  Neutrino3.0.theme  NovaTux.theme  Olive-3.0.theme  Olive.theme  Origin.theme  Red.theme  VirginMedia.theme
data/weather/: Makefile.am  weather-favorites.xml  weather-locations-norway.xml  weather-locations.xml
data/webradio/: Makefile.am
data/webtv/: Makefile.am
data/y-web/: Makefile.am  Y_About.yhtm  Y_Baselib.js  Y_Blank.yhtm  Y_Blocks.txt  Y_Blocks_Neutrino.txt  Y_Boxcontrol_Bouquet_Editor_Edit.yhtm  Y_Boxcontrol_Bouquet_Editor_Main.yhtm  Y_Boxcontrol_Bouquetlist.yhtm  Y_Boxcontrol_Bouquets.yhtm  Y_Boxcontrol_Channellist.yhtm  Y_Boxcontrol_Menue.yhtm  Y_Boxcontrol_Messages.yhtm  Y_EPG.js  Y_EPG_Plus.yhtm  Y_Ext_Menue.yhtm  Y_Ext_Settings.yhtm  Y_Ext_Uninstall.yhtm  Y_Ext_Update.js  Y_Ext_Update.yhtm  Y_Ext_Update_refresh.yhtm  Y_Filemgr.yhtm  Y_Filemgr_Edit.yhtm  Y_Flash.js  Y_Info_Help.yhtm  Y_Info_Menue.yhtm  Y_Info_Updates.yhtm  Y_Live_EPG.yhtm  Y_Live_EPG_Info.yhtm  Y_Live_Menue.yhtm  Y_Live_Msg.yhtm  Y_Live_Transcode.yhtm  Y_Main.css  Y_Menue.yhtm  Y_NetFS-control.yhtm  Y_NetFS-edit.yhtm  Y_NetFS-init.yhtm  Y_PZapit-control.yhtm  Y_Plugin-control.yhtm  Y_Refresh.yhtm  (+55 more)
data/zapit/: Makefile.am  epgmap.xml  myservices.xml
lib/: Makefile.am
lib/connection/: Makefile.am  basicclient.cpp  basicclient.h  basicmessage.h  basicserver.cpp  basicserver.h  basicsocket.cpp  basicsocket.h  messagetools.cpp  messagetools.h
lib/controldclient/: Makefile.am  controldMsg.h  controldclient.cpp  controldclient.h  controldtypes.h
lib/hardware/: audio.h  ca.h  dmx.h  playback.h  record.h  video.h
lib/jsoncpp/: Makefile.am  jsoncpp.cpp
lib/libconfigfile/: Makefile.am  configfile.cpp  configfile.h
lib/libcoolstream/: .svnignore  Makefile.am  audio_cs.h  ca_cs.h  cnxtfb.h  control.h  cs_api.h  cs_types.h  cs_vfd.h  dmx_cs.h  dvb-ci.h  hardware_caps.cpp  hardware_caps.h  init_cs.h  mmi.h  nevis_ir.h  playback_cs.h  pwrmngr.h  record_cs.h  tsrouter.h  video_cs.h
lib/libcoolstream2/: audio_cs.h  ca_cs.h  cnxtfb.h  control.h  cs_api.h  cs_frontpanel.h  cs_ir_generic.h  cs_types.h  dmx_cs.h  mmi.h  playback.h  playback_cs.h  record_cs.h  tsrouter.h  video_cs.h
lib/libdvbsub/: Debug.cpp  Debug.hpp  Makefile.am  PacketQueue.cpp  PacketQueue.hpp  dvbsub.cpp  dvbsub.h  dvbsub_thread.hpp  dvbsubtitle.cpp  dvbsubtitle.h  helpers.cpp  helpers.hpp  osd.cpp  osd.h  reader_thread.hpp  tools.cpp  tools.h
lib/libeventserver/: Makefile.am  eventserver.cpp  eventserver.h
lib/libiw/: Makefile.am  iwlib.c  iwlib.h  iwscan.cpp  iwscan.h
lib/liblcddisplay/: Makefile.am  fontrenderer.cpp  fontrenderer.h  lcddisplay.cpp  lcddisplay.h
lib/libmd5sum/: Makefile.am  libmd5sum.c  libmd5sum.h  md5.c  md5.h  sys2.h
lib/libnet/: Makefile.am  libnet.c  libnet.cpp  libnet.h  (+2 more)
src/: Makefile.am  create_rcsim_h.sh  drivertool.c  dt.c  global.h  mdev_helper.cpp  mymenu.h  neutrino.cpp  neutrino.cpp.rej  neutrino.cpp~  neutrino.h  neutrinoMessages.h  neutrino_menue.cpp  neutrino_menue.h  plugin.h  rcsim.c  rcsim.h  shutdown_helper.c  uncoolinit.cpp  uncooloff.c  videosettings.h
(+1335 files in other folders)
